--- a/register.css
+++ b/register.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    //border:1px solid black;
 }
 body {
     margin:0;
@@ -9,7 +10,8 @@ body {
     background-attachment:fixed;
 }
 #login{
-	margin-left:40px;
+	margin-left:20px;
+	padding-top:20px;
 }
 .navbar ul {
     list-style-type: none;
@@ -17,7 +19,6 @@ body {
     padding: 0;
     overflow: hidden;
     background-color:transparent;
-    position: fixed;
     top: 0;
     width: 100%;
 }
@@ -54,7 +55,7 @@ input{
     font-size: 16px;
     color: white;
     font-family:'Allerta',sans-serif;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.6);
     background-size: 25px;
     background-position: 10px 10px; 
     background-repeat: no-repeat;
@@ -62,7 +63,7 @@ input{
     margin: 0 0 20px 0;
  }
  input:focus{
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.85);
  }
  input[type=submit]{
  	width: 100px;
@@ -75,7 +76,8 @@ input{
     text-align: center;
  }
  .main{
- 	margin:180px 400px 0 400px;
+ 	margin:110px 400px 0 400px;
+ 	background-color:rgba(0,0,0,0.5);
  }
  
  .box{
@@ -88,9 +90,11 @@ input{
  	margin-left:5px;
  }
  .bdy{
-  margin:52px 300px 0 300px;
+  margin:0 300px;
+  height:675px;
   font-family:Allerta,sans-serif;
   text-align:left;
+  background-color:rgba(0,0,0,0.4);
  }
  .fn{
  margin-right: 110px;
@@ -115,11 +119,16 @@ input{
  }
  #lgn{
  	margin:0 155px 0 300px;
+ 	padding-bottom:10px;
  }
  #submit{
  width:100px;
  height:50px;
  margin-left:450px;
+ }
+ #cd{
+ 	padding-top:40px;
+ 	font-size:40px;
  }
  #submit:hover{
  background-color:rgba(0,0,0,0.6);
