--- a/nav.css
+++ b/nav.css
@@ -63,10 +63,12 @@ li a:hover:not(.active) {
 input[type=text] {
     width: 500px;
     box-sizing: border-box;
-    border: 2px solid #ccc;
     border-radius: 4px;
+    border-color:transparent;
     font-size: 16px;
-    background-color: white;
+    font-family:Allerta,sans-serif;
+    color:white;
+    background-color:rgba(0,0,0,0.4);
     background-image: url('searchicon.png');
     background-size: 25px;
     background-position: 10px 10px; 
@@ -74,12 +76,18 @@ input[type=text] {
     padding: 12px 20px 12px 40px;
     margin: 0px 0px 0px 420px;
 }
-
+input[type=text]:focus{
+	background-color:rgba(0,0,0,0.6);
+	outline:none;
+}
+input[type=text]:hover{
+	background-color:rgba(0,0,0,0.6);
+}
 .button {
     background-color: rgba(0,0,0,0.4); 
     border: none;
     position:relative;
-    color: white		;
+    color: white;
     font-family:'Allerta',cursive;
     padding: 12px 28px;
     text-align: center;
