--- a/register.css
+++ b/register.css
@@ -127,6 +127,9 @@ input{
  width:100px;
  height:50px;
  margin-left:450px;
+ background:transparent;
+ border-color:transparent;
+ cursor:pointer;
  }
  #cd{
  	padding-top:40px;
