--- a/register.css
+++ b/register.css
@@ -48,7 +48,8 @@ li a:hover:not(.active) {
 h1 {
 	color: rgb(251,211,27);
 	text-align: center;
-	font-size:62px;
+	font-size:40px;
+	padding-top:20px;
     font-family:'Nunito',cursive;
 }
 input{
@@ -93,7 +94,7 @@ input{
  }
  .bdy{
   margin:0 300px;
-  height:675px;
+  height:655px;
   font-family:Allerta,sans-serif;
   text-align:left;
   background-color:rgba(0,0,0,0.4);
@@ -128,7 +129,6 @@ input{
  height:50px;
  margin-left:450px;
  background:transparent;
- border-color:transparent;
  cursor:pointer;
  }
  #cd{
